fix: add z-index to prevent image dragging

--- a/app/scss/layout/_soft-red.scss
+++ b/app/scss/layout/_soft-red.scss
@@ -4,12 +4,14 @@
 .soft-red-section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  z-index: -1;
 
   @include breakpoint-up(medium) {
     grid-template-columns: 1fr 1fr;
   }
 
   &__img-container {
+
     & img {
       display: block;
       width: 100%;
